--- a/job/templates/job/job_detail.html
+++ b/job/templates/job/job_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block body %}
     
@@ -26,16 +27,16 @@
               <div class="single_jobs white-bg d-flex justify-content-between">
                 <div class="jobs_left d-flex align-items-center">
                   <div class="thumb">
-                    <img src="img/svg_icon/1.svg" alt="" />
+                    <img src="{{job.image.url}}"width=90px hight=90px alt="" />
                   </div>
                   <div class="jobs_conetent">
-                    <a href="#"><h4>Software Engineer</h4></a>
+                    <a href="#"><h4>{{job}}</h4></a>
                     <div class="links_locat d-flex align-items-center">
                       <div class="location">
                         <p><i class="fa fa-map-marker"></i> California, USA</p>
                       </div>
                       <div class="location">
-                        <p><i class="fa fa-clock-o"></i> Part-time</p>
+                        <p><i class="fa fa-clock-o"></i> {{job.job_type}}</p>
                       </div>
                     </div>
                   </div>
@@ -53,19 +54,10 @@
               <div class="single_wrap">
                 <h4>Job description</h4>
                 <p>
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have suffered alteration in some
-                  form, by injected humour, or randomised words which don't look
-                  even slightly believable. If you are going to use a passage of
-                  Lorem Ipsum, you need to be sure there isn't anything
-                  embarrassing.
+                  {{job.description}}
                 </p>
                 <p>
-                  Variations of passages of lorem Ipsum available, but the
-                  majority have suffered alteration in some form, by injected
-                  humour, or randomised words which don't look even slightly
-                  believable. If you are going to use a passage of Lorem Ipsum,
-                  you need to be sure there isn't anything embarrassing.
+                  {{job.description}}
                 </p>
               </div>
               <div class="single_wrap">
@@ -116,7 +108,7 @@
             </div>
             <div class="apply_job_form white-bg">
               <h4>Apply for the job</h4>
-              <form action="#">
+              {% comment %} <form action="#">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="input_field">
@@ -172,7 +164,20 @@
                     </div>
                   </div>
                 </div>
-              </form>
+              </form> {% endcomment %}
+              
+
+{# Display a form #}
+<form method="POST" enctype="multipart/form-data" >
+{% comment %} <form method="POST"> {% endcomment %}
+  {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+      <button class="boxed-btn3 w-100" type="submit">Apply Now</button>
+    {% endbuttons %}
+</form>
+              
+
             </div>
           </div>
           <div class="col-lg-4">
@@ -182,11 +187,11 @@
               </div>
               <div class="job_content">
                 <ul>
-                  <li>Published on: <span>12 Nov, 2019</span></li>
-                  <li>Vacancy: <span>2 Position</span></li>
-                  <li>Salary: <span>50k - 120k/y</span></li>
-                  <li>Location: <span>California, USA</span></li>
-                  <li>Job Nature: <span> Full-time</span></li>
+                  <li>Published on: <span>{{job.published_at|date:'d M o'}}</span></li>
+                  <li>Vacancy: <span>{{job.vacancy}}</span></li>
+                  <li>Salary: <span>{{job.salary}}k/y</span></li>
+                  <li>Location: <span></span></li>
+                  <li>Job Nature: <span> {{job.job_type}}</span></li>
                 </ul>
               </div>
             </div>
