--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -19,7 +19,7 @@
     {% csrf_token %}
     {%bootstrap_form form %}
     <input class="boxed-btn3 w-100" type="submit" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
+    <input type="hidden" name="next" value="{%url 'accounts:profile' %}">
   </form>
 
   {# Assumes you setup the password_reset view in your URLconf #}
